novas implementacoes
